# chat-mcp

./: .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  Dockerfile  Dockerfile.agent  IMPLEMENTATION_PLAN.md  PROTOCOL.md  README.md  USE_CASES.md  docker-compose.prod.yml  dummy.txt  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
docker/: agent-entrypoint.sh  agent-init.sh
migrations/: 001_initial.sql
scripts/: deploy-aws.sh  dev_server.sh  setup-aws.sh
src/chat_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chat_mcp/agent/: config.py  filters.py  invoker.py  runner.py
src/chat_mcp/cli/: auth.py  client.py  config.py  main.py  signing.py
src/chat_mcp/cli/commands/: attach.py  auth_cmd.py  edit.py  pin.py  react.py  read.py  room.py  search.py  send.py  status.py  watch.py
src/chat_mcp/cli/tui/: app.py  chat_view.py  input_bar.py  sidebar.py
src/chat_mcp/server/: app.py  auth.py  config.py  db.py  middleware.py  models.py  signing.py
src/chat_mcp/server/routes/: attachment_routes.py  (+6 more)
src/chat_mcp/shared/: constants.py  models.py  signing.py
tests/: conftest.py
tests/agent/: test_filters.py  test_filters_extended.py  test_runner.py
tests/cli/: test_commands.py  test_signing.py
tests/server/: test_attachments.py  test_attachments_extended.py  test_auth.py  test_events.py  test_integration.py  test_messages.py  test_messages_extended.py  test_participants.py  test_pins.py  test_reactions.py  test_rooms.py  test_rooms_extended.py  test_search.py  test_signing.py  test_signing_extended.py
(+5 files in other folders)
